Add home screen, types, restructure files

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Record Needles</title>
+    <title>Puge - the simplist budgeting app</title>
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1.0, viewport-fit=cover, width=device-width" />
